5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1592_1801.log
== TEST (2019-03-25 15:44:04) 
-- CODE:
var1=input("abra ")
print(var1*4)
-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:44:23) 
-- CODE:
var1=input("abra ")
print(var1*4)
-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:45:14) 
-- CODE:
var1=input("")
print(var1*4 "")
-- ERROR:
File "XXXX", line 2
    print(var1*4 "")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:45:45) 
-- CODE:
var1=input("abra " "")
print(var1*4)
-- OUTPUT:
abra livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:46:13) 
-- CODE:
var1=input("abra"+"")
print(var1*4)
-- OUTPUT:
abralivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:46:29) 
-- CODE:
var1=input("abra"+"")
print(var1*4)
-- OUTPUT:
abralivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:47:18) 
-- CODE:
var1=input("")
print(var1*4)
-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:50:10) 
-- CODE:
var1="Abra"
var2=input("")
var3=var1+var2
print(var3*5)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:50:22) 
-- CODE:
var1="Abra"
var2=input("")
var3=var1+var2
print(var3*5)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:51:53) 
-- CODE:
var1="Abra"
var2=input("")
var3=var1+var2
print((var3+"")*5)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:52:05) 
-- CODE:
var1="Abra"
var2=input("")
var3=var1+var2
print((var3+"")*5)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:52:18) 
-- CODE:
var1="Abra"
var2=input("")
var3=var1+var2
print((var3+"")*5)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:53:09) 
-- CODE:
var1="Abra"
var2=input("")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:53:33) 
-- CODE:
var1="Abra"
var2=input(" """)
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:53:38) 
-- CODE:
var1="Abra"
var2=input(" """)
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:54:05) 
-- CODE:
var1="Abra"
var2=input(" " "")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 21:17:53) 
-- CODE:
var1="Abra"
var2=input(" " "")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:29:40) 
-- CODE:
var1="Abra"
var2=input(" " "")
var3=var1+var2
print((var3" "+" ")*5)
-- ERROR:
File "XXXX", line 4
    print((var3" "+" ")*5)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:30:17) 
-- CODE:
var1="Abra"
var2=input(" " "")
var3=var1+var2
print((var3+" "+" ")*5)
-- OUTPUT:
Abralivro  Abralivro  Abralivro  Abralivro  Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:30:44) 
-- CODE:
var1="Abra"
var2=input(" "+"")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:30:57) 
-- CODE:
var1="Abra"
var2=input(" "+" ")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:34:36) 
-- CODE:
var1="Abra"
var2=input(" "+)
var3=var1+var2
print((var3+" ")*5)
-- ERROR:
File "XXXX", line 2
    var2=input(" "+)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:34:59) 
-- CODE:
var1="Abra"
var2=input(" "+"")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:35:21) 
-- CODE:
var1="Abra"
var2=input(" ")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:36:09) 
-- CODE:
var1="Abra"
var2=input(" ")
var3=var1+var2
print((var3" ")*5)
-- ERROR:
File "XXXX", line 4
    print((var3" ")*5)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:36:18) 
-- CODE:
var1="Abra"
var2=input(" ")
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:36:31) 
-- CODE:
var1="Abra"
var2=input()
var3=var1+var2
print((var3+" ")*5)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:37:08) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1" "+" "var2)
print((var3+" ")*5)
-- ERROR:
File "XXXX", line 3
    var3=(var1" "+" "var2)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:37:14) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1" "+var2)
print((var3+" ")*5)
-- ERROR:
File "XXXX", line 3
    var3=(var1" "+var2)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:37:20) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1+" "+var2)
print((var3+" ")*5)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:37:37) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1+" "+var2)
print((var3+" ")*5)
-- EXECUTION TIME:
0.188523
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:38:00) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1+" "+var2)
print((var3+" ")*5)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:38:08) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1+" "+var2)
print((var3+" ")*5)
-- EXECUTION TIME:
0.184551
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:38:10) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1+" "+var2)
print((var3+" ")*5)
-- EXECUTION TIME:
0.159292
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:38:11) 
-- CODE:
var1="Abra"
var2=input()
var3=(var1+" "+var2)
print((var3+" ")*5)
-- EXECUTION TIME:
0.122428
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:39:05) 
-- CODE:
var2=input()
var3=("Abra"+" "+var2)
print((var3+" ")*5)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:39:13) 
-- CODE:
var2=input()
var3=("Abra"+" "+var2)
print((var3+" ")*5)
-- EXECUTION TIME:
0.161684
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:39:17) 
-- CODE:
var2=input()
var3=("Abra"+" "+var2)
print((var3+" ")*5)
-- EXECUTION TIME:
0.127988
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:39:23) 
-- CODE:
var2=input()
var3=("Abra"+" "+var2)
print((var3+" ")*5)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:40:32) 
-- CODE:
var2=input()
var3=("Abra"+" "+var2)
n=input("repetição:")
print((var3+" ")*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((var3+" ")*n)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:40:46) 
-- CODE:
var2=input()
var3=("Abra"+" "+var2)
n=input("repetição:")
print((var3+" ")*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((var3+" ")*n)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:42:45) 
-- CODE:
var1=int(input())
var2=input()
var3=("Abra"+" "+var2)
print((var3+" ")*var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: 'livro'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:42:55) 
-- CODE:
var1=int(input())
var2=input()
var3=("Abra"+" "+var2)
print((var3+" ")*var1)
-- EXECUTION TIME:
0.127286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1801/main.py", line 1, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: 'livro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:45:08) 
-- CODE:
var2=input("nome do objeto")
var1=int(input("quantas vezes?"))
var3=("Abra"+" "+var2)
print((var3+" ")*var1)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:45:19) 
-- CODE:
var2=input("nome do objeto: ")
var1=int(input("quantas vezes?"))
var3=("Abra"+" "+var2)
print((var3+" ")*var1)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:45:29) 
-- CODE:
var2=input("nome do objeto: ")
var1=int(input("quantas vezes?"))
var3=("Abra"+" "+var2)
print((var3+" ")*var1)
-- EXECUTION TIME:
0.264054
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
